manifests/overlays/sydney/letsencrypt-production/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: shared-app-route
  namespace: demo-app
spec:
  parentRefs:
    - name: shared-app-gw
      namespace: api-gateway
  hostnames:
    - greenblue.${DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: green-app
          port: 8080
